--- a/src/partials/_colors.scss
+++ b/src/partials/_colors.scss
@@ -1,8 +1,8 @@
-$primary-normal: #AB04D9;
-$primary-light: #8303A6;
-$primary-dark: #360259;
+$primaryNormal: #AB04D9;
+$primaryLight: #8303A6;
+$primaryDark: #360259;
 
-$black-normal: #000000;
-$black-light: #edeaef;
+$blackNormal: #000000;
+$blackLight: #edeaef;
 
-$white-normal: #fff;
+$whiteNormal: #fff;
