--- a/src/partials/_login.scss
+++ b/src/partials/_login.scss
@@ -1,17 +1,54 @@
-.page-container {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    height: 100vh; 
-}
+@import "./colors";
 
-.container{
+.custom-box{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.custom-card{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 400px;
-    height: 400px;
-    background: transparent;
-    border: 2px solid $black-light;
-    backdrop-filter: blur(20px);
+    height: 450px;
+}
+.custom-title{
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    
+}
+.custom-input {
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+    padding-top: 10px;
+
+    & > :first-child {
+        margin-bottom: 30px; 
+    }
+}
+.custom-button {
+    display: flex !important;
+    align-items: center ;
+    justify-content: center ;
+    background-color: $primaryNormal !important;
+    margin: auto !important;
+    width: 50% ;
+    margin-top: 40px !important;
+}
+.custom-button:hover{
+    animation: scaleButton 0.8s alternate infinite;
+}
+@keyframes scaleButton{
+    from{
+        transform: scale(1);
+
+    }
+    to{
+        transform: scale(1.07);
+
+    }
 }
