--- a/src/global.css
+++ b/src/global.css
@@ -5,34 +5,65 @@
   outline: 0;
 }
 
-.page-container {
+.custom-box {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-content: center;
 }
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.custom-card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 400px;
-  height: 400px;
-  background: transparent;
-  border: 2px solid #edeaef;
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
+  height: 380px;
 }
 
+.custom-title {
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10px;
+  color: #AB04D9;
+}
+
+.custom-input {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+}
+.custom-input > :first-child {
+  margin-bottom: 30px;
+}
+
+.custom-button {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  background-color: #AB04D9 !important;
+  margin: auto !important;
+  width: 50%;
+  margin-top: 40px !important;
+  font-family: "Poppins", sans-serif !important;
+}
+
+.custom-button:hover {
+  animation: scaleButton 0.8s alternate infinite;
+}
+
+@keyframes scaleButton {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.07);
+  }
+}
 body {
-  font-family: "Sora", sans-serif;
+  font-family: "Poppins", sans-serif;
   width: 100%;
   height: 100vh;
   position: relative;
   background-color: #360259;
-}
-
-button {
-  font-family: "Sora", sans-serif;
-  cursor: pointer;
 }/*# sourceMappingURL=global.css.map */
