--- a/src/global.scss
+++ b/src/global.scss
@@ -9,16 +9,12 @@
 @import "partials/login";
 
 body{
-    font-family: 'Sora', sans-serif;
+    font-family: "Poppins", sans-serif;
     width: 100%;
     height: 100vh;
     position: relative;
-    background-color: $primary-dark;
+    background-color: $primaryDark;
 }
 
-button{
-    font-family: 'Sora', sans-serif;
-    cursor: pointer;
-}
 
 
