--- a/src/partials/_produtolista.scss
+++ b/src/partials/_produtolista.scss
@@ -1,3 +1,6 @@
+@import "./_colors";
+
+
 .produto-lista-container {
     margin-top: 100px;
 }
@@ -6,6 +9,7 @@
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 20px;
+    
 }
 
 .produto-filtros {
