--- a/src/partials/_login.scss
+++ b/src/partials/_login.scss
@@ -1,62 +1,53 @@
 @import "./_colors";
 
-.custom-box{
+.custom-box {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.custom-card{
+
+.custom-card {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
     height: 380px;
-    @media (max-width: 600px) { // Adicionando media query para dispositivos móveis
+    @media (max-width: 768px) {
         width: 80%; // Ajustando a largura para ocupar 80% da largura da tela
         height: auto; // Permitindo altura automática para acomodar o conteúdo
-        padding: 20px; // Adicionando preenchimento para espaçamento interno
     }
 }
 
-.custom-title{
+.custom-title {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
     margin-top: 10px;
-    
 }
+
 .custom-input {
     display: flex;
     flex-direction: column;
     margin: 30px;
     & > :first-child {
-        margin-bottom: 30px; 
+        margin-bottom: 30px;
     }
 }
+
 .custom-button {
     display: flex !important;
-    align-items: center ;
-    justify-content: center ;
+    align-items: center;
+    justify-content: center;
     margin: auto !important;
-    width: 50% ;
+    width: 50%;
     margin-top: 40px !important;
-    font-family: "Poppins", sans-serif !important; 
-    @media (max-width: 600px) { // Adicionando media query para dispositivos móveis
+    font-family: "Poppins", sans-serif !important;
+    @media (max-width: 768px) {
         width: 100%; // Ajustando a largura para ocupar 100% da largura disponível
     }
-
 }
-.custom-button:hover{
-    animation: scaleButton 0.8s alternate infinite;
-}
-@keyframes scaleButton{
-    from{
-        transform: scale(1);
 
-    }
-    to{
-        transform: scale(1.07);
-
-    }
+.custom-button:hover {
+    animation: scaleButton 0.8s alternate
 }
