--- a/src/partials/_login.scss
+++ b/src/partials/_login.scss
@@ -12,10 +12,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    height: 380px;
+    height: auto;
     @media (max-width: 768px) {
-        width: 80%; // Ajustando a largura para ocupar 80% da largura da tela
-        height: auto; // Permitindo altura automática para acomodar o conteúdo
+        width: 80%; /* Ajustando a largura para ocupar 80% da largura da tela */
+        height: auto; /* Permitindo altura automática para acomodar o conteúdo */
     }
 }
 
@@ -44,10 +44,10 @@
     margin-top: 40px !important;
     font-family: "Poppins", sans-serif !important;
     @media (max-width: 768px) {
-        width: 100%; // Ajustando a largura para ocupar 100% da largura disponível
+        width: 100%; /* Ajustando a largura para ocupar 100% da largura disponível */
     }
 }
 
 .custom-button:hover {
-    animation: scaleButton 0.8s alternate
+    animation: scaleButton 0.8s alternate;
 }
