--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-size: cover;
+  height: 400px;
 }
 
 .custom-card {
@@ -18,7 +18,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 300px;
-  background-size: cover;
 }
 
 .custom-title {
